[project]
name = "video-player"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyobjc-framework-avfoundation>=11.0",
    "pyobjc>=11.0",
    "pyobjc-framework-cocoa>=11.0",
    "pyobjc-framework-quartz>=11.0",
    "numpy>=2.2.1",
    "glfw>=2.8.0",
    "pyopengl>=3.1.7",
    "imgui-bundle>=1.6.2",
    "pyav>=14.0.1",
    "sounddevice>=0.5.1",
]

[dependency-groups]
dev = [
    "ipython>=8.31.0",
]
